--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "filament/filament": "^3.0",
-        "league/flysystem-aws-s3-v3": "^3.0",
-        "resend/resend-laravel": "^1.0"
+        "league/flysystem-aws-s3-v3": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
